Подготовил домашку к сдаче

--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
     <div class="info center" id="about-games">
         <h2 class="info__main-title">Об играх</h2>
         <h3 class="info__main-subtitle">В моей коллекции представлено 6 игр на разные темы. <br>Игры несложные — в них
-            может поиграть каждый. <br>
-            Все игры доступны для пользования.</h3>
+            может поиграть каждый. <br> Все игры доступны для пользования.</h3>
         <div class="games-box center">
             <div class="games-box__grid">
                 <div class="games-box__column">
@@ -112,92 +111,76 @@
         <h2 class="game-play__title">Мини-игры</h2>
         <div class="game-play__flex">
                 <article class="game-play__product binding-big-top" id="game-one">
-                    <a class="game-play__link" href="#">
                     <div class="game-play__box">
                         <h3 class="game-play__subtitle">Угадай число</h3>
                         <p class="game-play__text">Попробуй угадать случайное <br> число от 1 до 100.
                         </p>
-                        <a class="game-play__link-btn" href="#">
+                        <div class="game-play__btn-box">
                             <button class="game-play__btn">Играть!</button>
-                        </a>
+                        </div>
                     </div>
                     <img class="game-play__img" src="img/game1.png" alt="Game-1">
-                </a>
                 </article>
                 <article class="game-play__product" id="game-two">
-                    <a class="game-play__link" href="#">
                     <img class="game-play__img" src="img/game2.png" alt="Game-2">
                     <div class="game-play__box">
                         <h3 class="game-play__subtitle">Простая арифметика</h3>
                         <p class="game-play__text">Попробуй решить простые <br> арифметические задачи.</p>
-                        <a class="game-play__link-btn" href="#">
+                        <div class="game-play__btn-box">
                             <button class="game-play__btn">Играть!</button>
-                        </a>
+                        </div>
                     </div>
-                </a>
                 </article>
                 <article class="game-play__product" id="game-tree">
-                    <a class="game-play__link" href="#">
                     <div class="game-play__box">
                         <h3 class="game-play__subtitle">Переверни текст</h3>
                         <p class="game-play__text">Попробуй ввести текст, который <br> будет перевернут.
                         </p>
-                        <a class="game-play__link-btn" href="#">
+                        <div class="game-play__btn-box">
                             <button class="game-play__btn">Играть!</button>
-                        </a>
+                        </div>
                     </div>
                     <img class="game-play__img" src="img/game3.png" alt="Game-3">
-                </a>
                 </article>
                 <article class="game-play__product" id="game-five">
-                    <a class="game-play__link" href="#">
                     <img class="game-play__img" src="img/game4.png" alt="Game-4">
                     <div class="game-play__box">
                         <h3 class="game-play__subtitle">Викторина</h3>
                         <p class="game-play__text">Отвечай на вопросы викторины <br> с вариантами ответов.
                         </p>
-                        <a class="game-play__link-btn" href="#">
+                        <div class="game-play__btn-box">
                             <button class="game-play__btn">Играть!</button>
-                        </a>
+                        </div>
                     </div>
-                </a>
                 </article>
                 <article class="game-play__product" id="game-for">
-                    <a class="game-play__link" href="#">
                     <div class="game-play__box">
                         <h3 class="game-play__subtitle">Камень, <br> ножницы, <br> бумага</h3>
                         <p class="game-play__text">Сыграй в популярную игру <br> против компьютера.</p>
-                        <a class="game-play__link-btn" href="#">
+                        <div class="game-play__btn-box">
                             <button class="game-play__btn">Играть!</button>
-                        </a>
+                        </div>
                     </div>
                     <img class="game-play__img" src="img/game5.png" alt="Game-5">
-                </a>
                 </article>
                 <article class="game-play__product margin" id="game-six">
-                    <a class="game-play__link" href="#">
                     <img class="game-play__img" src="img/game6.png" alt="Game-6">
                     <div class="game-play__box">
                         <h3 class="game-play__subtitle">Генератор <br> случайных <br> цветов</h3>
                         <p class="game-play__text">Игра, в которой при клике на кнопку <br> фон страницы
                             меняется на случайный.</p>
-                        <a class="game-play__link-btn" href="#">
+                        <div class="game-play__btn-box">
                             <button class="game-play__btn">Играть!</button>
-                        </a>
+                        </div>
                     </div>
-                </a>
                 </article>
         </div>
     </section>
     <footer class="footer">
-        <div class="footer__box-star">
             <img class="footer__mini-bottom-star" src="mini-star-bottom.svg" alt="star">
             <img class="footer__big-bottom-star" src="big-star-bottom.svg" alt="star">
-        </div>
         <h2 class="footer__text">Все права защищены.</h2>
     </footer>
-
-    <script src="script.js"></script>
 </body>
 
 </html>
