Небольшие изменения, хотел сделать больше но решил оставить, т.к. в последующих hw сделал их.

--- a/index.html
+++ b/index.html
@@ -28,15 +28,14 @@
             </h2>
             <div class="header__box">
                 <a class="header__link" href="#about-games">
-                    <form>
-                        <button class="header__link-btn">Поехали!</button>
-                    </form>
+                    <div class="header__link-btn">
+                        <button class="header__btn">Поехали!</button>
+                        </div>
                 </a>
             </div>
         </section>
     </header>
-    <div class="scroll-bar">
-    </div>
+    <div class="scroll-bar"></div>
     <div class="info center" id="about-games">
         <h2 class="info__main-title">Об играх</h2>
         <h3 class="info__main-subtitle">В моей коллекции представлено 6 игр на разные темы. <br>Игры несложные — в них
