Внёс изменения по дз

--- a/index.html
+++ b/index.html
@@ -26,13 +26,7 @@
             <h2 class="header__subtitle">Тебе предстоит пройти несколько увлекательных игр. <br> Если готов, нажимай
                 <b>«Поехали!»</b> и <b>приступай</b>.
             </h2>
-            <div class="header__box">
-                <a class="header__link" href="#about-games">
-                    <div class="header__link-block">
-                        <button class="header__link-btn">Поехали!</button>
-                    </div>
-                </a>
-            </div>
+            <a href="#about-games" class="header__link-btn">Поехали!</a>
         </section>
     </header>
     <div class="scroll-bar"></div>
