--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
             <h2 class="header__subtitle">Тебе предстоит пройти несколько увлекательных игр. <br> Если готов, нажимай
                 <b>«Поехали!»</b> и <b>приступай</b>.
             </h2>
+            <div class="header__link-box">
             <a href="#about-games" class="header__link-btn">Поехали!</a>
+            </div>
         </section>
     </header>
     <div class="scroll-bar"></div>
