Создал и сделал laptop.scss(Готово к проверке)

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         </article>
                     </a>
                     <a class="games-box__link" href="#game-for">
-                        <article class="games-box__product big-big">
+                        <article class="games-box__product big-big order-for">
                             <img class="games-box__img" src="img/img4.png" alt="img">
                             <div class="games-box__section">
                                 <p class="games-box__title">Игра № 4</p>
@@ -78,9 +78,9 @@
                         </article>
                     </a>
                 </div>
-                <div class="games-box__column">
+                <div class="games-box__column row-laptop">
                     <a class="games-box__link" href="#game-tree">
-                        <article class="games-box__product small">
+                        <article class="games-box__product small alignment-laptop">
                             <img class="games-box__img" src="img/img3.png" alt="img">
                             <div class="games-box__section">
                                 <p class="games-box__title">Игра № 3</p>
@@ -88,7 +88,7 @@
                             </div>
                         </article>
                     </a>
-                    <a class="games-box__link" href="#game-six">
+                    <a class="games-box__link padding-laptop" href="#game-six">
                         <article class="games-box__product big-big">
                             <img class="games-box__img" src="img/img6.png" alt="img">
                             <div class="games-box__section">
@@ -236,7 +236,7 @@
                 <img class="game-play__img" src="img/game6.png" alt="Game-6">
                 <div class="game-play__box">
                     <h3 class="game-play__subtitle">Генератор <br> случайных <br> цветов</h3>
-                    <p class="game-play__text">Игра, в которой при клике на кнопку <br> фон страницы
+                    <p class="game-play__text width-laptop">Игра, в которой при клике на кнопку <br> фон страницы
                         меняется на случайный.</p>
                     <div class="game-play__btn-box">
                         <button class="game-play__btn">Играть!</button>
