Подредактировал mobile, tablet и добавил отдельные ссылки(кнопки) на них.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
             </h2>
             <div class="header__link-box">
                 <a href="#about-games" class="header__link-btn">Поехали!</a>
+                <a href="#about-games-tablet" class="header__link-btn-tablet">Поехали!</a>
+                <a href="#about-games-mobile" class="header__link-btn-mobile">Поехали!</a>
             </div>
         </section>
     </header>
@@ -102,7 +104,7 @@
         </div>
     </div>
 
-    <div class="info-tablet center" id="about-games">
+    <div class="info-tablet center" id="about-games-tablet">
         <h2 class="info__main-title">Об играх</h2>
         <h3 class="info__main-subtitle">В моей коллекции представлено 6 игр на разные темы. <br>Игры несложные — в них
             может поиграть каждый. <br> Все игры доступны для пользования.</h3>
@@ -174,7 +176,7 @@
         </div>
     </div>
 
-    <section class="game-play center">
+    <section class="game-play center" id="about-games-mobile">
         <img class="game-play__big-top-star" src="big-star-top.svg" alt="star">
         <img class="game-play__mini-top-star" src="mini-star-top.svg" alt="star">
         <h2 class="game-play__title">Мини-игры</h2>
