Сделал правки в заданиях, но не понял как привязать игру к кнопке, что то делаю не так.

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                     <p class="game-play__text">Попробуй угадать случайное <br> число от 1 до 100.
                     </p>
                     <div class="game-play__btn-box">
-                        <button class="game-play__btn">Играть!</button>
+                        <button id="oneGame" class="game-play__btn">Играть!</button>
                     </div>
                 </div>
                 <img class="game-play__img" src="img/game1.png" alt="Game-1">
