--- a/index.html
+++ b/index.html
@@ -252,6 +252,7 @@
         <img class="footer__big-bottom-star" src="big-star-bottom.svg" alt="star">
         <h2 class="footer__text">Все права защищены.</h2>
     </footer>
+    <script src="./game-one.js"></script>
 </body>
 
 </html>
