--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                     <h3 class="game-play__subtitle">Простая арифметика</h3>
                     <p class="game-play__text">Попробуй решить простые <br> арифметические задачи.</p>
                     <div class="game-play__btn-box">
-                        <button class="game-play__btn">Играть!</button>
+                        <button id="twoGame" class="game-play__btn">Играть!</button>
                     </div>
                 </div>
             </article>
@@ -252,6 +252,7 @@
         <img class="footer__big-bottom-star" src="big-star-bottom.svg" alt="star">
         <h2 class="footer__text">Все права защищены.</h2>
     </footer>
+    <script src="./game-one.js"></script>
 </body>
 
 </html>
