--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                     <p class="game-play__text">Попробуй угадать случайное <br> число от 1 до 100.
                     </p>
                     <div class="game-play__btn-box">
-                        <button id="oneGame" class="game-play__btn">Играть!</button>
+                        <button class="game-play__btn">Играть!</button>
                     </div>
                 </div>
                 <img class="game-play__img" src="img/game1.png" alt="Game-1">
@@ -252,7 +252,6 @@
         <img class="footer__big-bottom-star" src="big-star-bottom.svg" alt="star">
         <h2 class="footer__text">Все права защищены.</h2>
     </footer>
-    <script src="./game-one.js"></script>
 </body>
 
 </html>
