--- a/index.html
+++ b/index.html
@@ -253,6 +253,7 @@
         <h2 class="footer__text">Все права защищены.</h2>
     </footer>
     <script src="./game-one.js"></script>
+    <script src="./game-two.js"></script>
 </body>
 
 </html>
