--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                     <p class="game-play__text">Попробуй ввести текст, который <br> будет перевернут.
                     </p>
                     <div class="game-play__btn-box">
-                        <button class="game-play__btn">Играть!</button>
+                        <button id="treeGame" class="game-play__btn">Играть!</button>
                     </div>
                 </div>
                 <img class="game-play__img" src="img/game3.png" alt="Game-3">
@@ -253,6 +253,7 @@
         <h2 class="footer__text">Все права защищены.</h2>
     </footer>
     <script src="./game-one.js"></script>
+    <script src="./game-tree.js"></script>
 </body>
 
 </html>
