--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                     <p class="game-play__text">Отвечай на вопросы викторины <br> с вариантами ответов.
                     </p>
                     <div class="game-play__btn-box">
-                        <button class="game-play__btn">Играть!</button>
+                        <button id="forGame" class="game-play__btn">Играть!</button>
                     </div>
                 </div>
             </article>
@@ -253,7 +253,9 @@
         <h2 class="footer__text">Все права защищены.</h2>
     </footer>
     <script src="./game-one.js"></script>
+    <script src="./game-two.js"></script>
     <script src="./game-tree.js"></script>
+    <script src="./game-for.js"></script>
 </body>
 
 </html>
