Написал игру и подключил к кнопке

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                     <h3 class="game-play__subtitle">Камень, <br> ножницы, <br> бумага</h3>
                     <p class="game-play__text">Сыграй в популярную игру <br> против компьютера.</p>
                     <div class="game-play__btn-box">
-                        <button class="game-play__btn">Играть!</button>
+                        <button id="fiveGame" class="game-play__btn">Играть!</button>
                     </div>
                 </div>
                 <img class="game-play__img" src="img/game5.png" alt="Game-5">
@@ -256,5 +256,6 @@
     <script src="./game-two.js"></script>
     <script src="./game-tree.js"></script>
     <script src="./game-for.js"></script>
+    <script src="./game-five.js"></script>
 </body>
 </html>
