--- a/hw9 Задания.html
+++ b/hw9 Задания.html
@@ -6,17 +6,25 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- Задание 1 -->
     <h1 class="title">Hello, world</h1>
     <p class="text">Lorem ipsum dolor sit.</p>
-    <button class="btn">Скрыть</button>
+    <button class="btn-hide">Скрыть</button>
+
+    <!-- Задание 2 -->
+     <p></p>
+     <button class="btn-change">Менять</button>
     <script>
+    // <!-- Задание 1 -->
         const titleEl = document.querySelector('.title');
-        const btnEl = document.querySelector('.btn');
+        const btnEl = document.querySelector('.btn-hide');
         const textEl = document.querySelector('.text');
 
         btnEl.addEventListener('click', () => {
-            textEl.titleNew = 'hello';
+            titleEl.titlenone = 'hello';
         });
+    // <!-- Задание 2 -->
+
     </script>
 </body>
 </html>
