--- a/hw9 Задания.html
+++ b/hw9 Задания.html
@@ -10,21 +10,7 @@
     <h1 class="title">Hello, world</h1>
     <p class="text">Lorem ipsum dolor sit.</p>
     <button class="btn-hide">Скрыть</button>
-
-    <!-- Задание 2 -->
-     <p></p>
-     <button class="btn-change">Менять</button>
-    <script>
-    // <!-- Задание 1 -->
-        const titleEl = document.querySelector('.title');
-        const btnEl = document.querySelector('.btn-hide');
-        const textEl = document.querySelector('.text');
-
-        btnEl.addEventListener('click', () => {
-            titleEl.titlenone = 'hello';
-        });
-    // <!-- Задание 2 -->
-
-    </script>
+    
+     <script src="./hw 9 задания.js"></script>
 </body>
 </html>
