--- a/hw9 Задания.html
+++ b/hw9 Задания.html
@@ -6,10 +6,28 @@
     <title>Document</title>
 </head>
 <body>
+
     <!-- Задание 1 -->
-    <h1 class="title">Hello, world</h1>
+
+    <h1 class="title-hide">Hello, world</h1>
     <button class="btn-hide">Скрыть</button>
-    
+
+    <!-- Задание 2 -->
+
+    <p class="text-color">Lorem ipsum dolor sit.</p>
+    <button class="btn-color">Изменить цвет</button>
+
+    <!-- Задание 3 -->
+
+    <h1 class="title-change">Пока, мир!</h1>
+    <button class="btn-change">Изменить текст</button>
+
+    <!-- Задание 4 -->
+
+            <h2 class="description">Заголовок</h2>
+            <p class="description">Lorem ipsum dolor sit.</p>
+            <p class="description">Lorem ipsum dolor sit amet.</p>
+        
      <script src="./hw 9 задания.js"></script>
 </body>
 </html>
