Генерация случайных цветов готова

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                     <p class="game-play__text width-laptop">Игра, в которой при клике на кнопку <br> фон страницы
                         меняется на случайный.</p>
                     <div class="game-play__btn-box">
-                        <button class="game-play__btn">Играть!</button>
+                        <button id="six-game" class="game-play__btn">Играть!</button>
                     </div>
                 </div>
             </article>
@@ -257,5 +257,6 @@
     <script src="./game-tree.js"></script>
     <script src="./game-for.js"></script>
     <script src="./game-five.js"></script>
+    <script src="./game-six.js"></script>
 </body>
 </html>
