Добавил полосу прокрутки

--- a/index.html
+++ b/index.html
@@ -33,7 +33,22 @@
             </div>
         </section>
     </header>
-    <div class="scroll-bar"></div>
+    <div class="scroll-bar">
+    <div class="scroll-bar__block">
+        <p class="scroll-bar__title">Викторина</p>
+        <img class="scroll-bar__star" src="./img/Star.png" alt="Star">
+        <p class="scroll-bar__title">Угадай число</p>
+        <img class="scroll-bar__star" src="./img/Star.png" alt="Star">
+        <p class="scroll-bar__title">Переверни текст</p>
+        <img class="scroll-bar__star" src="./img/Star.png" alt="Star">
+        <p class="scroll-bar__title">Простая арифметика</p>
+        <img class="scroll-bar__star" src="./img/Star.png" alt="Star">
+        <p class="scroll-bar__title">Камень, ножницы, бумага</p>
+        <img class="scroll-bar__star" src="./img/Star.png" alt="Star">
+        <p class="scroll-bar__title">Генератор случайных цветов</p>
+        <img class="scroll-bar__star" src="./img/Star.png" alt="Star">
+    </div>
+</div>
     <div class="info center" id="about-games">
         <h2 class="info__main-title">Об играх</h2>
         <h3 class="info__main-subtitle">В моей коллекции представлено 6 игр на разные темы. <br>Игры несложные — в них
